# Router-Lab-Docs

./: .gitignore  Makefile  README.md  deploy.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: doc.yml
docs/: begin.md  check.md  experiment.md  experiment_hint.md  faq.md  first_stage.md  framework.md  glossary.md  index.md  local_test.md  online_experiment.md  online_judge.md  plagiarism.md  preparation.md  requirement.md  second_stage.md  theory.md  third_stage.md  wikipedia.md
docs/appendix/: debug.md  glossary.md  ip.md  make.md  raspberry_pi.md  topology.md
docs/howto/: debug.md  ip.md  make.md  raspberry_pi.md  rip.md
docs/img/: flow.dot
docs/joint/: basics.md  check.md  datapath.md  eval.md  forwardingtable.md  index.md  interface.md  mac-assignment.txt  modules.md  nd.md  rfc.md  routetable.md
docs/p4/: control_plane.md  data_plane.md  index.md  tofino_data_plane.md  tofino_lab.md
docs/software/: begin.md  debug.md  faq.md  first_stage.md  framework.md  help.md  index.md  plagiarism.md  preparation.md  requirement.md  second_stage.md  theory.md  third_stage.md  wikipedia.md
docs/software/img/: interconnect.drawio  topology_group.drawio
docs/software/second_stage/: dhcpv6_debug.md  dhcpv6_evaluation.md  dhcpv6_overview.md  ospf_debug.md  ospf_evaluation.md  ospf_glossary.md  ospf_overview.md  ospf_rfc.md  ripng_debug.md  ripng_evaluation.md  ripng_overview.md  tftp_debug.md  tftp_evaluation.md  tftp_overview.md
docs/static/: r3.pcap
pandoc/: docx.yml  pdf.yml
theme-override/: main.html
(+16 files in other folders)
