[tool.poetry]
name = "router-lab-docs"
version = "0.1.0"
description = ""
authors = ["Jiajie Chen <c@jia.je>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^9.4.8"
mkdocs-git-authors-plugin = "^0.10.0"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
